Bug 1683865 - Make calendar-readstatus invisible when it has no src. r=aleca
Otherwise the image will be visible with a black outline.

Differential Revision: https://phabricator.services.mozilla.com/D112281

--HG--
extra : amend_source : 07105286cce44c653354f07fc1f96dd57aa6669a

--- a/calendar/base/themes/common/widgets/calendar-widgets.css
+++ b/calendar/base/themes/common/widgets/calendar-widgets.css
@@ -285,3 +285,7 @@ checkbox.calendar-displayed:focus > .checkbox-check {
   fill: currentColor;
   opacity: 0.7;
 }
+
+.calendar-readstatus:not([src]) {
+  visibility: hidden;
+}
